# c-template

./: CMakeLists.txt
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt
